# nmt-with-pytorch

./: README.md  pyproject.toml
pytorch_nmt_transformer/: config.py  helper.py  inference.py  main.py  train.py  translator.py
pytorch_nmt_transformer/data/: __init__.py  preprocessor.py  reader.py
pytorch_nmt_transformer/model/: __init__.py  attention.py  decoder.py  encoder.py  feedforward.py  positional_encoding.py  token_embedding.py  transformer.py
