[tool.poetry]
name = "pytorch-nmt-transformer"
version = "0.1.0"
description = ""
authors = ["Abhash Sinha <abhash_sinha@hotmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_nmt_transformer"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.1"
numpy = "^1.24.2"
torchtext = "^0.15.0"
torchdata = "^0.6.0"
spacy = "^3.5.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
de_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.5.0/de_core_news_sm-3.5.0.tar.gz" }


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
